--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -24,7 +24,7 @@
                             
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="department">
                                 <i class="fas fas fa-home"></i>Departments</a>
                         </li>
                         <li>
