--- a/views/pages/form.ejs
+++ b/views/pages/form.ejs
@@ -102,7 +102,7 @@
                                                        <label for="file-input" class=" form-control-label">File input</label>
                                                    </div>
                                                    <div class="col-12 col-md-9">
-                                                       <input type="file" id="files" name="Stdnt_image" class="form-control-file">
+                                                       <input type="file" id="files" name="stdntImage" class="form-control-file">
                                                        <output id="list" style="width: 100px;height: 100px;"></output>
                                                    </div>
                                                </div>
