--- a/views/pages/test.html
+++ b/views/pages/test.html
@@ -11,51 +11,15 @@
 
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="../../node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+<link rel="stylesheet" href="../../node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
 <body>
-	<table class="table table-responsive table-hover">
-	  <thead>
-	        <tr><th>Column</th><th>Column</th><th>Column</th><th>Column</th></tr>
-	    </thead>
-	    <tbody>
-	        <tr class="clickable" data-toggle="collapse" id="row1" data-target=".row1">
-	            <td><i class="glyphicon glyphicon-plus"></i></td>
-	            <td>data</td>
-	          	<td>data</td>  
-	            <td>data</td>
-	        </tr>
-	        <tr class="collapse row1">
-	            <td>- child row</td>
-	            <td>data</td>
-	          	<td>data</td>  
-	            <td>data</td>
-	        </tr>
-	        <tr class="collapse row1">
-	            <td>- child row</td>
-	            <td>data</td>
-	          	<td>data</td>  
-	            <td>data</td>
-	        </tr>
-	        <tr class="clickable" data-toggle="collapse" id="row2" data-target=".row2">
-	            <td><i class="glyphicon glyphicon-plus"></i></td>
-	            <td>data</td>
-	          	<td>data</td>  
-	            <td>data</td>
-	        </tr>
-	        <tr class="collapse row2">
-	            <td>- child row</td>
-	            <td>data 2</td>
-	          	<td>data 2</td>  
-	            <td>data 2</td>
-	        </tr>
-	        <tr class="collapse row2">
-	            <td>- child row</td>
-	            <td>data 2</td>
-	          	<td>data 2</td>  
-	            <td>data 2</td>
-	        </tr>
-	    </tbody>
-	</table>
+	<button onclick="Swal('Hello world!');">clixk</button>
+	<script type="text/javascript">
+		
+		
+	</script>
 
 </body>
 </html>
