--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -19,7 +19,7 @@
                                 	<div class="row">
                                 		<div class="col col-lg-4">
                                 			
-                                		<img src="../<%= item[0].Stdnt_image %>" style="width: 100px; height: 100px;">
+                                		<img src="<%= item[0].stdntImage %>" style="width: 100px; height: 100px;">
 		                            	</div>
 		                            	<div class="col col-lg-8">
 		                            		<h3 style="background-color:#263238; color: #FFFFFF;padding: 10px;" >Student Information</h3>
