--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,6 +15,6 @@
     <script src="/vendor/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="/vendor/select2/select2.min.js">
     </script>
-
+    <script src="/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
 </body>
 </html>
