--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,7 +18,8 @@
     <link href="/vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" media="all">
     <link href="/vendor/slick/slick.css" rel="stylesheet" media="all">
     <link href="/vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="/vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all">
+    <link href="/vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet"  >
 
     <!-- Main CSS-->
     <link href="/css/theme.css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="/vendor/sweetalert2/dist/sweetalert2.min.css" media="all">
